<resources>
    <string name="app_name">Let\'s Study</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register_here">Register Here</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="cpassword">Confirm Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="facebook_logo">facebook logo</string>
    <string name="google_logo">google logo</string>
    <string name="background_image">background image</string>
    <string name="submit">Submit</string>

    <string name="facebook_app_id">2319601628252813</string>
    <string name="fb_login_protocol_scheme">fb2319601628252813</string>


    <string name="age">Date Of Birth</string>
    <string name="qualification">Qualification</string>
    <string name="divider">|</string>
    <string name="pursuing">Pursuing</string>
    <string name="_12th_bca_mca">12th, BCA, MCA</string>
    <string name="study_points">Study Points</string>
    <string name="_000000">000000</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_description">Enter Description</string>
    <string name="submit_text">Submit Text</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="contribute_to_the_community">Contribute to the community</string>
    <string name="write_comment">Write comment..</string>
    <string name="comment_btn">comment btn</string>
    <string name="long_post_touch_to_see_more">Long Post touch to see more</string>
    <string name="search_community">Search community</string>
    <string name="comment">Comment</string>
    <string name="timestamp">TimeStamp</string>
    <string name="name_and_comment">Name and Comment</string>
    <string name="delete_button">delete button</string>
    <string name="comment_like_btn">comment like btn</string>
    <string name="hello_sample_name">Hello Sample Name</string>
    <string name="image_desc">image desc</string>
    <string name="hello_sample_date">Hello Sample Date</string>
    <string name="hello_sample_description">Hello Sample Description</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="text">text</string>
</resources>
