<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/cmnt_profile"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/user_default_profile" />

    <TextView
        android:id="@+id/cmnt_nameTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/name_and_comment"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cmnt_profile"
        app:layout_constraintTop_toTopOf="@+id/cmnt_profile" />

    <TextView
        android:id="@+id/cmnt_timeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/timestamp"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cmnt_nameTV"
        app:layout_constraintTop_toBottomOf="@+id/cmnt_nameTV" />

    <ImageView
        android:id="@+id/cmnt_deleteBtn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/delete_button"
        android:tint="@color/button_green"
        android:tintMode="multiply"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/cmnt_timeTV"
        app:layout_constraintEnd_toEndOf="@+id/cmnt_nameTV"
        app:layout_constraintTop_toTopOf="@+id/cmnt_timeTV"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <ImageView
        android:id="@+id/cmnt_likeBtn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/comment_like_btn"
        app:layout_constraintBottom_toBottomOf="@+id/cmnt_timeTV"
        app:layout_constraintStart_toEndOf="@+id/cmnt_timeTV"
        app:layout_constraintTop_toTopOf="@+id/cmnt_timeTV"
        app:srcCompat="@drawable/like_unselected" />

    <TextView
        android:id="@+id/cmnt_likeCountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/likes"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/cmnt_likeBtn"
        app:layout_constraintStart_toEndOf="@+id/cmnt_likeBtn"
        app:layout_constraintTop_toTopOf="@+id/cmnt_likeBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>