<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_back"
    tools:context=".Login.view.Login">

    <View
        android:id="@+id/login_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edittext_bg"
        android:transitionName="email_transition"
        app:layout_constraintBottom_toTopOf="@+id/login_pass_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Email"
            android:background="@drawable/edittext_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="20sp"
            tools:targetApi="o" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_pass_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edittext_bg"
        android:transitionName="password_transition"
        app:layout_constraintBottom_toTopOf="@+id/login_loginBtn"
        app:layout_constraintEnd_toEndOf="@+id/login_email_layout"
        app:layout_constraintStart_toStartOf="@+id/login_email_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_pass_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:hint="@string/password"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="20sp"
            tools:targetApi="o" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/login_forgot_passTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/droid_sans_bold"
        android:text="@string/forgot_password"
        android:textColor="#ffffff"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/login_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/login_google_imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/google_logo"
        android:src="@drawable/google_logo"
        app:layout_constraintBottom_toTopOf="@+id/login_forgot_passTV"
        app:layout_constraintEnd_toEndOf="@+id/login_forgot_passTV"
        app:layout_constraintStart_toStartOf="@+id/login_pass_layout" />

    <ImageView
        android:id="@+id/login_facebook_imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/facebook_logo"
        android:src="@drawable/fb_logo"
        app:layout_constraintBottom_toBottomOf="@+id/login_google_imageView"
        app:layout_constraintEnd_toEndOf="@+id/login_pass_layout"
        app:layout_constraintStart_toStartOf="@+id/login_forgot_passTV"
        app:layout_constraintTop_toTopOf="@+id/login_google_imageView" />

  <!--  <com.facebook.login.widget.LoginButton
        android:id="@+id/login_facebook_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/facebook_logo"
        android:layout_gravity="center_horizontal"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        app:layout_constraintTop_toBottomOf="@id/login_google_imageView"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_forgot_passTV"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        />-->

    <TextView
        android:id="@+id/login_registrationTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/droid_sans_bold"
        android:text="@string/register_here"
        android:textColor="#ffffff"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/login_google_imageView"
        app:layout_constraintEnd_toEndOf="@+id/login_loginBtn"
        app:layout_constraintStart_toStartOf="@+id/login_loginBtn" />

    <Button
        android:id="@+id/login_loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/droid_sans_bold"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="26sp"
        android:transitionName="btnLogin_transition"
        app:layout_constraintBottom_toTopOf="@+id/login_registrationTV"
        app:layout_constraintEnd_toEndOf="@+id/login_pass_layout"
        app:layout_constraintStart_toStartOf="@+id/login_pass_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>